--- a/Digikabu.NET/Digikabu.NET.csproj
+++ b/Digikabu.NET/Digikabu.NET.csproj
@@ -6,4 +6,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="UI\Page\" />
+  </ItemGroup>
+
 </Project>
